workloads/2048-dep.yaml
# Adapt the nodeSelector according to your configuration
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: My2048App
  name: '2048'
  namespace: '2048'
  annotations:
    # do not apply this manifest on the cluster
    flux.weave.works/ignore: 'false'
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: My2048App
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: My2048App
    spec:
      automountServiceAccountToken: false
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: eks.amazonaws.com/capacityType
                    operator: In
                    values:
                      - SPOT
      tolerations:
        # - key: 'karpenter.com/taint'
        #   operator: 'Exists'
        #   effect: 'NoSchedule'
        - key: 'spotInstance'
          operator: 'Equal'
          value: 'true'
          effect: 'PreferNoSchedule'

      containers:
        - image: public.ecr.aws/seb-demo/docker-2048:latest
          imagePullPolicy: IfNotPresent
          name: '2048'
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: 1
              memory: 50Mi
            requests:
              cpu: 1
              memory: 50Mi
          securityContext:
            readOnlyRootFilesystem: false
            privileged: false
            allowPrivilegeEscalation: false
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      #nodeSelector:
      #  topology.kubernetes.io/zone: eu-west-1c
      restartPolicy: Always
      schedulerName: default-scheduler
      #securityContext:
      #  runAsUser: 1000
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
