workloads/eks-example-readiness-dep.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eks-example-readiness
  namespace: eks-example-readiness
  labels:
    app: eks-example-readiness
  annotations:
    # Container Image Automated Updates
    flux.weave.works/automated: 'true'
    # do not apply this manifest on the cluster
    flux.weave.works/ignore: 'true'
spec:
  replicas: 3
  selector:
    matchLabels:
      app: eks-example-readiness
  template:
    metadata:
      labels:
        app: eks-example-readiness
    spec:
      containers:
        - name: eks-example-readiness
          image: 382076407153.dkr.ecr.eu-west-1.amazonaws.com/eks-example:a213b841
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
      terminationGracePeriodSeconds: 120
