workloads/eks-example-readiness-svc.yaml
#aws elbv2 describe-target-health --query 'TargetHealthDescriptions[].[Target.Id,TargetHealth.State]' --output table --target-group-arn $TARGET_ARN
#aws elbv2 describe-target-health --target-group-arn $TARGET_ARN
apiVersion: v1
kind: Service
metadata:
  name: eks-example-readiness
  namespace: eks-example-readiness
  labels:
    app: eks-example-readiness
  annotations:
    external-dns.alpha.kubernetes.io/hostname: eks-example-readiness.eksworkshop.demo3.allamand.com
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-type: 'external' # important for not using the "in-tree" code
    #service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: 'instance'
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: 'ip'
    ##
    #service.beta.kubernetes.io/aws-load-balancer-type: "nlb-ip"
    #service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
    #service.beta.kubernetes.io/aws-load-balancer-internal: "true"
    ##
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-timeout: '5'
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-interval: '10' # Must be one of the following values '[10, 30]'
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-healthy-threshold: '2'
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-unhealthy-threshold: '2'
    #https://docs.aws.amazon.com/elasticloadbalancing/latest/network/load-balancer-target-groups.html#target-group-attributes
    service.beta.kubernetes.io/aws-load-balancer-target-group-attributes: deregistration_delay.timeout_seconds=15,stickiness.enabled=false,deregistration_delay.connection_termination.enabled=true # default is 300
    service.beta.kubernetes.io/aws-load-balancer-additional-resource-tags: "Environnement=Dev,Creator=AWS ALB Controller,service=eks-example-readiness,component=eks-example"

    # do not apply this manifest on the cluster
    flux.weave.works/ignore: 'true'
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: eks-example-readiness
