workloads/2048-ing.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: '2048'
  name: 'service-2048'
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: My2048App
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: '2048'
  name: '2048'
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - host: 2048.eks.demo3.allamand.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-2048
                port:
                  number: 80
